[package]
name = "wasm-tar"
version = "1.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
tar = "0.4.37"
flate2 = "1.0.22"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
lto = true
